--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ python-dotenv>=1.0.0
 openai>=1.12.0
 notebook>=7.0.0
 ipykernel>=6.0.0
+requests>=2.31.0
 langsmith>=0.0.87
 langserve>=0.0.41
 beautifulsoup4>=4.12.2
