Add Google Vertex AI integration with new pipeline script. Updated requirements to include langchain-google-vertexai and google-cloud-aiplatform. Modified web RAG pipeline to use updated import paths and changed OpenAI model to gpt-4o-mini. Added initial FAISS index files for Vertex AI.

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,7 @@ arxiv>=1.4.7
 pymupdf>=1.23.8
 chromadb>=0.4.24
 faiss-cpu
-tiktoken 
+tiktoken
+# Added for Google Vertex AI Integration
+langchain-google-vertexai>=0.1.0
+google-cloud-aiplatform>=1.38.1 
