--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ langchain-openai>=0.0.5
 langchain-community>=0.0.10
 langchain-text-splitters>=0.0.1
 python-dotenv>=1.0.0
+langgraph>=0.0.66
 openai>=1.12.0
 notebook>=7.0.0
 ipykernel>=6.0.0
 requests>=2.31.0
+pytest>=7.4.0
 langsmith>=0.0.87
 langserve>=0.0.41
 beautifulsoup4>=4.12.2
